# job-recommender

./: .dockerignore  .env.example  .env.local.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  TODO.md  app.py  cloudbuild.yaml  pyproject.toml  router.py  ruff.toml
.claude/: settings.local.json
.claude/agents/: code-reviewer.md  debugger.md  deployer.md  documenter.md  migrator.md  python-dev.md  terraform-modifier.md  tester.md  troubleshooter.md
.claude/commands/: update.md  updates-commit.md
.devcontainer/: Dockerfile  devcontainer.json  starship.toml  terminal-setup.sh
app/: main.py
app/pages/: home.py  logout.py  plans.py  privacy.py  terms.py
app/services/: app_bootstrap.py  auth.py  cache.py  const.py  cookie_utils.py  github.py  headers_utils.py  logging_config.py  logout.py  profile.py  quota.py  research.py  session.py  session_keys.py
app/ui/: __init__.py  (+5 more)
components/: __init__.py  credits.py  job_search.py  profile.py  sidebar.py  welcome.py
db/: models.py
pages/: home.py  logout.py  plans.py  privacy.py  terms.py
scripts/: deploy.sh  load-env.sh  pre-terraform-apply.sh  proxy-green.sh  rollback.sh  run-local.sh
services/: app_bootstrap.py  auth.py  cache.py  const.py  github.py  logging_config.py  logout.py  models.py  profile.py  quota.py  research.py  session.py  session_keys.py
static/: index.html  plans.html  privacy.html  robots.txt  terms.html
terraform/: cloudbuild.tf  firestore.tf  load_balancer.tf  main.tf  monitoring.tf  providers.tf  terraform.tfvars.example  variables.tf
tests/: conftest.py  test_cookie_manager.py  test_cookie_manager_apptest.py  test_profile.py  test_research.py  test_session.py
updates/: 2025-12-06.md  2025-12-07.md  2025-12-09.md  2025-12-17.md  2025-12-24.md  2025-12-25.md  2025-12-27.md  2025-12-28.md  2025-12-31.md  2026-01-01.md  2026-01-03.md  2026-01-09.md  2026-01-11.md  2026-01-12.md
(+16 files in other folders)
